# literate-lsp

./: .gitignore  .languages.toml  .literate.toml  Cargo.toml  README.md  example.md  helix-languages.toml
src/: child_lsp.rs  child_lsp_init.rs  config.rs  disk_vdoc.rs  health.rs  lib.rs  main.rs  position.rs  request_mapper.rs  server.rs  virtual_doc.rs
src/utils/: constants.rs  logging.rs  mod.rs  uri_helpers.rs
tests/: integration_test.rs  virtual_doc_test.rs
