[package]
name = "literate-lsp"
version = "0.1.0"
edition = "2021"

[lib]
name = "literate_lsp"
path = "src/lib.rs"

[[bin]]
name = "literate-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
toml = "0.8"
rayon = "1.7"
home = "0.5"

[dev-dependencies]
tempfile = "3"
